--- a/1.README.md
+++ b/1.README.md
@@ -1,38 +1,44 @@
-# Autonomous Deal Assessment Framework (M&A Deal Review Bot)
+Autonomous Deal Assessment Framework (M&A Deal Review Bot)
+This project automates the assessment of company financials for acquisition decisions using a CrewAI-driven multi-agent system.
 
-This project automates the review of M&A deal documents using an AI-driven multi-agent system.
+Overview
+The system uses structured SEBI and company PDFs to extract, analyze, and generate insights relevant for M&A readiness analysis.
 
-## Overview
-The system is composed of three core agents:
-- **Web Crawling Agent**: Extracts company data from websites.
-- **Red Flag Detection Agent**: Detects risks, violations, and anomalies based on historical deal patterns.
-- **Report Generation Agent**: Creates structured reports from the issues detected.
+Core Agents
+PDF Extraction Agent
+Uses PyMuPDF and CrewAI to ingest and structure financial data from PDFs for analysis.
 
-## Project Files
+Red Flag Detection Agent
+Evaluates extracted financial chunks for issues that could impact acquisition decisions.
 
-1. [README.md](README.md)
-2. [Project Notes](project_notes.md)
-3. [M&A Deal Review Bot Flowchart](MA%20Deal%20Revivw%20Bot%20Flowchart.png)
+Report Generation Agent
+Summarizes findings into structured reports to support go/no-go M&A calls.
 
-## Project Structure
-
-```
+Project Structure
+perl
+Copy
+Edit
 ma-deal-review-bot/
 ├── README.md
-├── architecture/
-│   └── flowchart.png
-├── agents/
-│   ├── web_crawler_agent.py
-│   ├── red_flag_detector.py
-│   └── report_generator.py
-├── data/
-│   └── sample_ndas/
+├── pdf-extract-agent/
+│   └── extract.py
+├── RedFlag_Detection/
+│   └── flag_check.py
+├── Report_Generation/
+│   └── report_gen.py
 ├── docs/
 │   └── project_notes.md
-```
+Status
+✅ PDF extraction workflow stable using CrewAI
+✅ Red flag detection operational
+⏳ Report generation refinement ongoing
+📄 Documentation in progress
 
-## Status
-- ✅ Initial setup complete
-- ⏳ Agents in development
-- 📄 Documentation in progress
+How to Use
+Place your SEBI/company PDFs in your local directory.
 
+Run extract.py to structure the data.
+
+Run flag_check.py to detect financial red flags.
+
+Run report_gen.py to generate your M&A readiness report.
